--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
           <li class="dropdown">
             <a href="projects.html">Projects</a>
             <ul class="dropdown-content">
-              <li><a href="artistic-works.html">Artistic Works</a></li>
+              <li><a href="artistic-works.html">Send Me a color</a></li>
               <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
             </ul>
           </li>
