--- a/analogue-film.html
+++ b/analogue-film.html
@@ -33,81 +33,63 @@
 
     /* ---------------- HEADER + MENU ---------------- */
 
-    header {
+   header, main{ position: relative; z-index: 1; }
+
+    header{
       position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 68px;
-      background: rgba(5, 6, 8, 0.80);
-      backdrop-filter: blur(6px);
+      inset: 0 0 auto 0;
+      height: var(--hdr-h);
+      width: 100%;
       z-index: 1000;
-      /* sem linha de divisão */
-      /* border-bottom: 1px solid rgba(255, 255, 255, 0.08); */
+      background: linear-gradient(to bottom, rgba(6,7,11,.88), rgba(6,7,11,.35));
+      border-bottom: 1px solid rgba(255,255,255,.08);
+      backdrop-filter: blur(10px);
     }
 
-    nav {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      height: 100%;
-      padding: 0 20px;
-      display: flex;
+    nav{
+      max-width: var(--max);
+      margin:0 auto;
+      height:100%;
+      padding:0 22px;
+      display:flex;
+      align-items:center;
       justify-content: space-between;
-      align-items: center;
     }
 
-    /* Logotipo / Nome (link para Home) */
-    .brand {
-      font-family: "Bebas Kai";
-      font-size: 1.2rem;
-      letter-spacing: 0.17em;
-      color: var(--text-main);
-      text-decoration: none;
-    }
-
-    /* Menu */
-    .menu {
-      list-style: none;
-      display: flex;
-      gap: 22px;
-      margin: 0;
-      padding: 0;
-      font-size: 0.92rem;
-      color: var(--text-muted);
-      align-items: center;
-    }
-
-    .menu a {
-      color: inherit;
-      text-decoration: none;
-      position: relative;
-      padding-bottom: 2px;
+    .brand{
+      font-family:"Bebas Kai", system-ui, sans-serif;
+      letter-spacing:.18em;
       white-space: nowrap;
     }
 
-    .menu a:hover {
-      color: var(--accent);
+    .menu{
+      list-style:none;
+      display:flex;
+      gap: 14px;
+      margin:0;
+      padding:0;
+      font-size:.94rem;
+      color: var(--muted);
     }
 
-    /* Underline hover */
-    .menu a::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 0%;
-      height: 1px;
-      background: var(--accent);
-      transition: width 0.2s;
+    .menu a{
+      text-decoration:none;
+      color: inherit;
+      opacity:.9;
+      white-space: nowrap;
     }
 
-    .menu a:hover::after {
-      width: 100%;
-    }
+    .menu a:hover{ opacity:1; color: var(--text); }
 
+    main{ padding-top: var(--hdr-h); }
     /* Dropdowns */
     .dropdown {
       position: relative;
+    }
+
+    .dropdown > a::after {
+      content: " ▾";
+      font-size: 0.7em; /* seta mais discreta */
     }
 
     .dropdown-content {
@@ -141,6 +123,7 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
+
 
     /* ---------------- HERO SECTION (Analogue Film Practice) ---------------- */
 
@@ -235,7 +218,7 @@
         <li class="dropdown">
           <a href="projects.html">Projects ▾</a>
           <ul class="dropdown-content">
-            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="artistic-works.html">Send me a Color</a></li>
             <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
           </ul>
         </li>
