--- a/darkroom-lab.html
+++ b/darkroom-lab.html
@@ -9,7 +9,8 @@
   <style>
     :root{--text:#f5f5f5;--muted:#a6a9b5;--accent:#78d3ff;--max:1100px}
     html,body{height:100%}
-    body{margin:0;background:url('Timeline2.gif.gif') center/cover fixed no-repeat;color:var(--text);font-family:"Source Serif 4",serif;-webkit-font-smoothing:antialiased}
+    body{margin:0;background: rgba(5,6,8,.8);color:var(--text);font-family:"Source Serif 4",serif;-webkit-font-smoothing:antialiased}
+
     header{position:fixed;inset:0 0 auto 0;height:68px;background:rgba(5,6,8,.8);backdrop-filter:blur(6px);z-index:1000}
     nav{max-width:var(--max);margin:0 auto;height:100%;padding:0 20px;display:flex;align-items:center;justify-content:space-between}
     .brand{font-family:"Bebas Kai";letter-spacing:.12em;font-size:1.1rem;color:var(--text);text-decoration:none}
