--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 .about-header {
   display: flex;
   flex-direction: column;   /* <<< empilha */
-  align-items: flex-start;  /* alinha à esquerda */
+  align-items: flex-end;  /* alinha à esquerda */
   gap: -120px;                 /* espaço entre nome e contactos */
 }
 
