--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
   filter: contrast(1.08) saturation(1);
   display: flex;
   flex-direction: column; /* foto em cima, nome + contactos abaixo */
-  align-items: flex-start;
+  align-items: 20px 50px;
   gap: 12px;
 }
 /* nome */
