--- a/index.html
+++ b/index.html
@@ -531,37 +531,43 @@
   <!-- Foto -->
   <div class="about-photo-col">
     <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
+  <!-- Informação: nome + texto + contactos -->
+<div class="about-info">
+  <!-- header apenas para o nome -->
+  <div class="about-header">
+    <div class="about-name">Mariana Torres</div>
   </div>
-  <!-- Informação: nome + contactos + texto -->
-  <div class="about-info">
-    <div class="about-header">
-      <div class="about-name">Mariana Torres</div>
-      <div class="about-contact">
-        <div class="contact-item">
-          <span class="icon">✉</span>
-          <a href="mailto:mariana1108.torres@gmail.com">mariana1108.torres@gmail.com</a>
-        </div>
 
-        <div class="contact-item">
-          <span class="icon">☎</span>
-          <a href="tel:+351912473730">+351 912 473 730</a>
-        </div>
-
-        <div class="contact-item">
-          <span class="icon">↗</span>
-          <a href="https://vimeo.com/teuvimeo" target="_blank" rel="noopener">Vimeo</a>
-        </div>
-      </div>
-    </div>
-
-    <p class="about-text">
+  <!-- texto abaixo do nome -->
+  <p class="about-text">
     I work with moving image preservation, analogue film practices,
     and archival processes, focusing on the transmission of
     photochemical knowledge and its contemporary relevance,
-    in correlation with the imaterial digital spaces through research and
-    cinematic expanded cinema proposels.
+    in correlation with the immaterial digital spaces through research and
+    cinematic expanded cinema proposals.
   </p>
+
+  <!-- contactos abaixo do texto -->
+  <div class="about-contact">
+    <div class="contact-item">
+      <span class="icon">✉</span>
+      <a href="mailto:mariana1108.torres@gmail.com">mariana1108.torres@gmail.com</a>
+    </div>
+
+    <div class="contact-item">
+      <span class="icon">☎</span>
+      <a href="tel:+351912473730">+351 912 473 730</a>
+    </div>
+
+    <div class="contact-item">
+      <span class="icon">↗</span>
+      <a href="https://vimeo.com/teuvimeo" target="_blank" rel="noopener">Vimeo</a>
+    </div>
+  </div>
 </div>
+</div>
+</div>
+</v>
 </section>
   </main>
 </body>
