--- a/about.html
+++ b/about.html
@@ -81,6 +81,7 @@
 
     .menu a{
       text-decoration:none;
+      color: var(--muted);
       color: inherit;
       opacity:.9;
       white-space: nowrap;
