--- a/index.html
+++ b/index.html
@@ -434,15 +434,15 @@
   gap: 20px;                   /* espaço entre nome e contactos */
   font-family: "Bebas Kai", system-ui, sans-serif;
   letter-spacing: .18em;
-  font-size: 1rem;
+  font-size: 2rem;
   color: var(--muted);
  text-transform: uppercase;
-  margin-top: 12px; /* distância da foto */
+  margin-top: 14px; /* distância da foto */
   text-align: center;
 }
 .about-info {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-start;
 }
 /* text */
@@ -451,6 +451,9 @@
   font-size: 1.02rem;
   line-height: 1.55;
   color: var(--muted);
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
 /* contactos em linha */
