--- a/index.html
+++ b/index.html
@@ -562,44 +562,45 @@
     <!-- breathing space -->
 <div class="hero-breath"></div>
 <section class="about">
-<div class="about-inner">
-  <!-- Foto -->
-  <div class="about-photo-col">
-    <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
-  <!-- Informação: nome + texto + contactos -->
-   <div class="about-name">Mariana Torres</div> 
-<div class="about-info">
-  <!-- texto abaixo do nome -->
-  <p class="about-text">
-    I work with moving image preservation, analogue film practices,
-    and archival processes, focusing on the transmission of
-    photochemical knowledge and its contemporary relevance,
-    in correlation with the immaterial digital spaces through research and
-    cinematic expanded cinema proposals.
-  </p>
+  <div class="about-inner">
 
-  <!-- contactos abaixo do texto -->
-  <div class="about-contact">
-    <div class="contact-item">
-      <span class="icon">✉</span>
-      <a href="mailto:mariana1108.torres@gmail.com">mariana1108.torres@gmail.com</a>
+    <!-- COLUNA ESQUERDA -->
+    <div class="about-photo-col">
+      <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
+      <div class="about-name">Mariana Torres</div>
     </div>
 
-    <div class="contact-item">
-      <span class="icon">☎</span>
-      <a href="tel:+351912473730">+351 912 473 730</a>
+    <!-- COLUNA DIREITA -->
+    <div class="about-info">
+      <p class="about-text">
+        I work with moving image preservation, analogue film practices,
+        and archival processes, focusing on the transmission of
+        photochemical knowledge and its contemporary relevance,
+        in correlation with the imaterial digital spaces through research and
+        cinematic expanded cinema proposels.
+      </p>
+
+      <div class="about-contact">
+        <div class="contact-item">
+          <span class="icon">✉</span>
+          <a href="mailto:mariana1108.torres@gmail.com">mariana1108.torres@gmail.com</a>
+        </div>
+
+        <div class="contact-item">
+          <span class="icon">☎</span>
+          <a href="tel:+351912473730">+351 912 473 730</a>
+        </div>
+
+        <div class="contact-item">
+          <span class="icon">↗</span>
+          <a href="https://vimeo.com/teuvimeo" target="_blank">Vimeo</a>
+        </div>
+      </div>
     </div>
 
-    <div class="contact-item">
-      <span class="icon">↗</span>
-      <a href="https://vimeo.com/teuvimeo" target="_blank" rel="noopener">Vimeo</a>
-    </div>
   </div>
-</div>
-</div>
-</div>
-</v>
 </section>
+
   </main>
 </body>
 </html>
