--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
   font-family: "Bebas Kai", system-ui, sans-serif;
   letter-spacing: .18em;
   font-size: 2rem;
-  color: var(--muted);
+  color: var(#78d3ffed);
   text-transform: uppercase;
   white-space: nowrap;
   text-align: center;
