--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
   opacity: .60;
   opacity: .60;
 
-  pointer-events:none;
+  pointer-events:auto;
 }
     /* breathing zone after hero */
 .hero-breath{
