--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
   }
 }
 
-@media (max-width: 720px){
+@media (max-width: 720px)
   .about-inner{
     flex-direction:column;
     align-items:center;
