--- a/about.html
+++ b/about.html
@@ -145,6 +145,7 @@
   max-width:var(--max);
   margin:0 auto;
   display:flex;
+  flex-direction: row;   /* 👈 garante texto à esquerda */
   gap:72px;
   align-items:flex-start;
 }
