--- a/about.html
+++ b/about.html
@@ -157,6 +157,7 @@
 .about-text-col{
   flex:1;
   max-width:620px;
+  order:1;
 }
 
 .about-text-col h2{
@@ -184,6 +185,7 @@
   display:flex;
   flex-direction:column;
   align-items:center;
+  order:2;
 }
 
 /* foto */
