--- a/artistic-works.html
+++ b/artistic-works.html
@@ -14,27 +14,28 @@
 
   <style>
     :root {
-      --bg-soft: #090b10;
+      --bg: #050608;
       --text-main: #f5f5f5;
       --text-muted: #a6a9b5;
       --accent: #78d3ff;
       --max-width: 1200px;
+      --hdr-h: 64px;
     }
+
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
-      padding: 0;
-      background: #050608;
-      color: var(--text-main);
       font-family: "Source Serif 4", serif;
+      color: var(--text-main);
+      background: var(--bg);
       -webkit-font-smoothing: antialiased;
     }
 
+    header, main { position: relative; z-index: 1; }
+
     /* ---------------- HEADER ---------------- */
-
-  header, main{ position: relative; z-index: 1; }
-
-    header{
+    header {
       position: fixed;
       inset: 0 0 auto 0;
       height: var(--hdr-h);
@@ -45,87 +46,70 @@
       backdrop-filter: blur(10px);
     }
 
-    nav{
-      max-width: var(--max);
-      margin:0 auto;
-      height:100%;
-      padding:0 22px;
-      display:flex;
-      align-items:center;
+    nav {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      height: 100%;
+      padding: 0 22px;
+      display: flex;
+      align-items: center;
       justify-content: space-between;
     }
 
-    .brand{
-      font-family:"Bebas Kai", system-ui, sans-serif;
-      letter-spacing:.18em;
+    .brand {
+      font-family: "Bebas Kai", system-ui, sans-serif;
+      letter-spacing: .18em;
+      color: var(--text-main);
+      text-decoration: none;
       white-space: nowrap;
     }
 
-    .menu{
-      list-style:none;
-      display:flex;
+    .menu {
+      list-style: none;
+      display: flex;
       gap: 14px;
-      margin:0;
-      padding:0;
-      font-size:.94rem;
-      color: var(--muted);
+      margin: 0;
+      padding: 0;
+      font-size: .94rem;
+      color: var(--text-muted);
     }
 
-    .menu a{
-      text-decoration:none;
+    .menu a {
+      text-decoration: none;
       color: inherit;
-      opacity:.9;
+      opacity: .9;
       white-space: nowrap;
+      transition: color .3s, opacity .3s;
     }
 
-    .menu a:hover{ opacity:1; color: var(--text); }
+    .menu a:hover { opacity: 1; color: var(--accent); }
 
-    main{ padding-top: var(--hdr-h); }
-    /* Dropdowns */
-    .dropdown {
-      position: relative;
-    }
-
-    .dropdown > a::after {
-      content: " ▾";
-      font-size: 0.7em; /* seta mais discreta */
-    }
-
+    /* Dropdown */
+    .dropdown { position: relative; }
+    .dropdown > a::after { content: " ▾"; font-size: 0.7em; }
     .dropdown-content {
       display: none;
       position: absolute;
       top: 26px;
       left: 0;
       min-width: 220px;
-      background: rgba(5, 6, 8, 0.97);
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      background: rgba(5,6,8,0.97);
+      border: 1px solid rgba(255,255,255,0.1);
       padding: 10px 0;
       list-style: none;
       z-index: 999;
     }
-
-    .dropdown-content li {
-      padding: 4px 14px;
-      white-space: nowrap;
-    }
-
-    .dropdown-content li a {
-      display: block;
-      color: var(--text-muted);
-    }
-
+    .dropdown-content li { padding: 4px 14px; }
+    .dropdown-content li a { display: block; color: var(--text-muted); }
     .dropdown-content li a:hover {
       color: var(--accent);
-      background: rgba(255, 255, 255, 0.06);
+      background: rgba(255,255,255,.06);
     }
+    .dropdown:hover .dropdown-content { display: block; }
 
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
     /* ---------------- PAGE STRUCTURE ---------------- */
-
-    .page-wrapper {
-      padding-top: 130px; /* espaço para o header fixo */
+    main.page-wrapper {
+      padding-top: 130px;
       padding-bottom: 80px;
       max-width: var(--max-width);
       margin: 0 auto;
@@ -141,10 +125,9 @@
       text-align: center;
     }
 
-    /* --- Media Blocks for Artistic Works --- */
-
+    /* ---------------- MEDIA BLOCK ---------------- */
     .media-block {
-      max-width: 1200px;
+      max-width: var(--max-width);
       margin: 0 auto;
     }
 
@@ -153,17 +136,14 @@
       height: auto;
       display: block;
       border-radius: 6px;
+      margin-top: 26px;
     }
 
-    .media-block img + img {
-      margin-top: 0; /* evitamos margem dupla com o grid */
-    }
-
-    /* Vimeo video com mesma largura das imagens */
+    /* Vimeo video responsivo */
     .video-fixed {
       position: relative;
       width: 100%;
-      padding-bottom: 56.25%; /* 16:9 */
+      padding-bottom: 56.25%;
       margin: 26px 0;
       border-radius: 6px;
       overflow: hidden;
@@ -177,45 +157,41 @@
       border: none;
     }
 
-    /* Grid para as duas imagens de baixo */
+    /* Grid de duas imagens lado a lado */
     .media-row {
       display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       gap: 24px;
       margin-top: 26px;
     }
 
-    .media-row img {
-      width: 100%;
-      height: auto;
-      border-radius: 6px;
-    }
+    .media-row img { border-radius: 6px; }
 
-    @media (max-width: 800px) {
+    /* ---------------- RESPONSIVE ---------------- */
+    @media (max-width: 900px){
       .media-row {
         grid-template-columns: 1fr;
       }
-
-      h1 {
-        font-size: 2.3rem;
-        letter-spacing: 0.08em;
-      }
     }
+
+    @media (max-width: 480px){
+      h1 { font-size: 2.2rem; letter-spacing: .08em; }
+      .menu { flex-wrap: wrap; gap: 10px; }
+    }
+
   </style>
 </head>
-
 <body>
 
   <!-- ---------------- HEADER ---------------- -->
   <header>
     <nav>
       <a href="index.html" class="brand">MARIANA TORRES</a>
-
       <ul class="menu">
         <li><a href="about.html">About</a></li>
 
         <li class="dropdown">
-          <a href="projects.html">Projects ▾</a>
+          <a href="projects.html">Projects</a>
           <ul class="dropdown-content">
             <li><a href="artistic-works.html">Send Me a Color</a></li>
             <li><a href="research-preservation.html">Research & Preservation Works</a></li>
@@ -223,7 +199,7 @@
         </li>
 
         <li class="dropdown">
-          <a href="analogue-film.html">Analogue Film Practice ▾</a>
+          <a href="analogue-film.html">Analogue Film Practice</a>
           <ul class="dropdown-content">
             <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
             <li><a href="technical-documentation.html">Technical Documentation</a></li>
@@ -241,11 +217,8 @@
     <h1>SEND ME A COLOR</h1>
 
     <div class="media-block">
-
-      <!-- IMAGEM 1 GRANDE -->
       <img src="color1.png" alt="Send Me a Color – image 1" />
 
-      <!-- VÍDEO VIMEO (MESMA LARGURA) -->
       <div class="video-fixed">
         <iframe
           src="https://player.vimeo.com/video/1081106970?h=70594f4e3f"
@@ -254,12 +227,10 @@
         </iframe>
       </div>
 
-      <!-- IMAGENS 2 E 3 LADO A LADO -->
       <div class="media-row">
         <img src="color2.png" alt="Send Me a Color – image 2" />
         <img src="color3.png" alt="Send Me a Color – image 3" />
       </div>
-
     </div>
   </main>
 
