--- a/about.html
+++ b/about.html
@@ -66,6 +66,9 @@
       font-family:"Bebas Kai", system-ui, sans-serif;
       letter-spacing:.18em;
       white-space: nowrap;
+      color: var(--muted);        /* 👈 fixa a cor */
+      text-decoration: none;     /* 👈 remove sublinhado */
+      opacity: .9;
     }
 
     .menu{
