--- a/about.html
+++ b/about.html
@@ -41,17 +41,16 @@
 
     header, main{ position: relative; z-index: 1; }
 
+    /* ===== header minimal ===== */
     header{
       position: fixed;
       inset: 0 0 auto 0;
       height: var(--hdr-h);
-      width: 100%;
       z-index: 1000;
       background: linear-gradient(to bottom, rgba(6,7,11,.88), rgba(6,7,11,.35));
       border-bottom: 1px solid rgba(255,255,255,.08);
       backdrop-filter: blur(10px);
     }
-
     nav{
       max-width: var(--max);
       margin:0 auto;
@@ -60,6 +59,7 @@
       display:flex;
       align-items:center;
       justify-content: space-between;
+      gap: 18px;
     }
 
     .brand{
