--- a/about.html
+++ b/about.html
@@ -141,6 +141,8 @@
 }
 
 .about-inner{
+  padding-left: 17%; /* ou o valor usado no hero para o front frame */
+  max-width: 980px;
   max-width: 980px;
   margin:0 auto;
   display:flex;
