--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
 }
 
 .about-inner{
+  padding-left: 17%; /* ou o valor usado no hero para o front frame */
   max-width: 980px;
   margin: 0 auto;
 
