--- a/about.html
+++ b/about.html
@@ -146,6 +146,8 @@
   margin:0 auto;
   display:flex;
   gap:72px;
+  flex-direction: row;   /* 👈 garante texto à esquerda */
+  gap:72px;
   align-items:flex-start;
 }
 
