--- a/about.html
+++ b/about.html
@@ -158,6 +158,7 @@
 .about-text-col{
   flex:1;
   max-width:620px;
+  order: 2;
 }
 
 .about-text-col h2{
@@ -185,6 +186,7 @@
   display:flex;
   flex-direction:column;
   align-items:center;
+  order: 1;
 }
 
 /* foto */
