--- a/artistic-works.html
+++ b/artistic-works.html
@@ -1,112 +1,138 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Send Me a Color – Mariana Torres</title>
+  <title>Mariana Torres - About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
   <style>
-    :root {
-      --bg: #050608;
-      --text-main: #f5f5f5;
-      --text-muted: #a6a9b5;
-      --accent: #78d3ff;
-      --max-width: 1200px;
+    :root{
+      --bg:#06070b;
+      --text:#f2f4f7;
+      --muted: rgba(242,244,247,.70);
+      --muted2: rgba(242,244,247,.55);
+      --max: 1120px;
       --hdr-h: 64px;
     }
 
-    * { box-sizing: border-box; }
+    *{ box-sizing:border-box; }
+    html, body{ height:100%; margin:0; }
 
-    body {
-      margin: 0;
-      font-family: "Source Serif 4", serif;
-      color: var(--text-main);
-      background: var(--bg);
-      -webkit-font-smoothing: antialiased;
+    body{
+      font-family:"Source Serif 4", serif;
+      color: var(--text);
+      background-color: var(--bg);
+      background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
     }
 
-    header, main { position: relative; z-index: 1; }
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background:
+        radial-gradient(1200px 700px at 50% 40%, rgba(6,7,11,.34), rgba(6,7,11,.12) 55%, rgba(6,7,11,.28) 100%),
+        linear-gradient(to bottom, rgba(6,7,11,.24), rgba(6,7,11,.24));
+      pointer-events:none;
+      z-index:0;
+    }
 
-    /* ---------------- HEADER ---------------- */
-    header {
+    header, main{ position: relative; z-index: 1; }
+
+    /* ===== header minimal ===== */
+    header{
       position: fixed;
       inset: 0 0 auto 0;
       height: var(--hdr-h);
-      width: 100%;
       z-index: 1000;
       background: linear-gradient(to bottom, rgba(6,7,11,.88), rgba(6,7,11,.35));
       border-bottom: 1px solid rgba(255,255,255,.08);
       backdrop-filter: blur(10px);
     }
-
-    nav {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      height: 100%;
-      padding: 0 22px;
-      display: flex;
-      align-items: center;
+    nav{
+      max-width: var(--max);
+      margin:0 auto;
+      height:100%;
+      padding:0 22px;
+      display:flex;
+      align-items:center;
       justify-content: space-between;
+      gap: 16px;
     }
 
-    .brand {
-      font-family: "Bebas Kai", system-ui, sans-serif;
-      letter-spacing: .18em;
-      color: var(--text-main);
-      text-decoration: none;
+    .brand{
+      font-family:"Bebas Kai", system-ui, sans-serif;
+      letter-spacing:.18em;
       white-space: nowrap;
-    }
-
-    .menu {
-      list-style: none;
-      display: flex;
-      gap: 14px;
-      margin: 0;
-      padding: 0;
-      font-size: .94rem;
-      color: var(--text-muted);
-    }
-
-    .menu a {
-      text-decoration: none;
-      color: inherit;
+      color: var(--muted);        /* 👈 fixa a cor */
+      text-decoration: none;     /* 👈 remove sublinhado */
       opacity: .9;
-      white-space: nowrap;
-      transition: color .3s, opacity .3s;
     }
 
-    .menu a:hover { opacity: 1; color: var(--accent); }
+    .menu{
+      list-style:none;
+      display:flex;
+      gap: 14px;
+      margin:0;
+      padding:0;
+      font-size:.94rem;
+      color: var(--muted);
+    }
 
-    /* Dropdown */
-    .dropdown { position: relative; }
-    .dropdown > a::after { content: " ▾"; font-size: 0.7em; }
+    .menu a{
+      text-decoration:none;
+      color: var(--muted);
+      color: inherit;
+      opacity:.9;
+      white-space: nowrap;
+    }
+
+    .menu a:hover{ opacity:1; color: var(--text); }
+
+    main{ padding-top: var(--hdr-h); }
+    /* Dropdowns */
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown > a::after {
+      content: " ▾";
+      font-size: 0.7em; /* seta mais discreta */
+    }
+
     .dropdown-content {
       display: none;
       position: absolute;
       top: 26px;
       left: 0;
       min-width: 220px;
-      background: rgba(5,6,8,0.97);
-      border: 1px solid rgba(255,255,255,0.1);
+      background: rgba(5, 6, 8, 0.97);
+      border: 1px solid rgba(255, 255, 255, 0.1);
       padding: 10px 0;
       list-style: none;
       z-index: 999;
     }
-    .dropdown-content li { padding: 4px 14px; }
-    .dropdown-content li a { display: block; color: var(--text-muted); }
+
+    .dropdown-content li {
+      padding: 4px 14px;
+      white-space: nowrap;
+    }
+
+    .dropdown-content li a {
+      display: block;
+      color: var(--text-muted);
+    }
+
     .dropdown-content li a:hover {
       color: var(--accent);
-      background: rgba(255,255,255,.06);
+      background: rgba(255, 255, 255, 0.06);
     }
-    .dropdown:hover .dropdown-content { display: block; }
 
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
     /* ---------------- PAGE STRUCTURE ---------------- */
     main.page-wrapper {
       padding-top: 130px;
