--- a/about.html
+++ b/about.html
@@ -141,13 +141,12 @@
 }
 
 .about-inner{
-  max-width: 1000px;
-  margin:0 auto;
-  display:flex;
-  gap:8px;
-  flex-direction: row;   /* 👈 garante texto à esquerda */
-  gap:72px;
-  align-items:flex-start;
+  display: flex;
+  flex-direction: row;
+  max-width: 980px;   /* mesmo max-width do hero */
+  margin: 0 auto;     /* centraliza horizontalmente */
+  gap: 48px;          /* ajusta o espaçamento entre colunas */
+  align-items: center;
 }
 
 /* =======================
