--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
   max-width: 1200px;   /* mesmo max-width do hero */
   margin: 0 auto;     /* centraliza horizontalmente */
   gap: 48px;          /* ajusta o espaçamento entre colunas */
-  align-items: center;
+  align-items: flex-start;
 }
 
 /* =======================
