--- a/about.html
+++ b/about.html
@@ -147,6 +147,7 @@
   margin: 0 auto;     /* centraliza horizontalmente */
   gap: 48px;          /* ajusta o espaçamento entre colunas */
   align-items: flex-start;
+  justify-content: center;
 }
 
 /* =======================
