--- a/about.html
+++ b/about.html
@@ -146,8 +146,8 @@
   max-width: 1200px;   /* mesmo max-width do hero */
   margin: 0 auto;     /* centraliza horizontalmente */
   gap: 8px;          /* ajusta o espaçamento entre colunas */
-  align-items: center;
-  justify-content: flex-start;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 /* =======================
