--- a/about.html
+++ b/about.html
@@ -144,8 +144,7 @@
   display: flex;
   flex-direction: row;
   max-width: 1200px;   /* mesmo max-width do hero */
-  margin: 0 auto;     /* centraliza horizontalmente */
-  gap: 8px;          /* ajusta o espaçamento entre colunas */
+  margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
   align-items: flex-start;
 }
 
@@ -250,20 +249,6 @@
    RESPONSIVE
 ======================= */
 
-@media (max-width: 720px){
-  .about-inner{
-    gap:48px;
-  }
-}
-
-  .about-text-col{
-    max-width:100%;
-  }
-
-  .about-side{
-    width:100%;
-    margin-top:40px;
-  }
   </style>
 </head>
 <body>
@@ -347,6 +332,7 @@
             Vimeo
           </a>
         </div>
+
       </div>
     </div>
   </div>
