--- a/about.html
+++ b/about.html
@@ -146,6 +146,7 @@
   max-width: 1200px;   /* mesmo max-width do hero */
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
   align-items: flex-start;
+  gap: 40px;
 }
 
 /* =======================
