--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
   flex-direction: row;
   max-width: 1200px;   /* mesmo max-width do hero */
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
-  align-items: flex-start;
+  align-items: center;
   gap: 40px;
 }
 
